--- a/package.json
+++ b/package.json
@@ -62,13 +62,17 @@
     "@dcloudio/uni-cli-shared": "3.0.0-3080720230703001",
     "@dcloudio/uni-stacktracey": "3.0.0-3080720230703001",
     "@dcloudio/vite-plugin-uni": "3.0.0-3080720230703001",
+    "@typescript-eslint/eslint-plugin": "^6.2.0",
+    "@typescript-eslint/parser": "^6.2.0",
     "@vue/tsconfig": "^0.1.3",
     "eslint": "^8.45.0",
+    "eslint-plugin-vue": "^9.15.1",
     "husky": "^8.0.3",
     "typescript": "^4.9.4",
     "unplugin-auto-import": "^0.16.6",
     "unplugin-vue-components": "^0.25.1",
     "vite": "4.0.4",
+    "vite-plugin-eslint": "^1.8.1",
     "vue-tsc": "^1.0.24"
   },
   "lint-staged": {
