--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "eslint": "^8.45.0",
     "eslint-plugin-vue": "^9.15.1",
     "husky": "^8.0.3",
+    "lint-staged": "^13.2.3",
     "typescript": "^4.9.4",
     "unplugin-auto-import": "^0.16.6",
     "unplugin-vue-components": "^0.25.1",
