--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
     "@dcloudio/uni-mp-toutiao": "3.0.0-3080720230703001",
     "@dcloudio/uni-mp-weixin": "3.0.0-3080720230703001",
     "@dcloudio/uni-quickapp-webview": "3.0.0-3080720230703001",
+    "@vueuse/core": "^10.2.1",
+    "luch-request": "^3.1.0",
     "vue": "^3.2.45",
     "vue-i18n": "^9.1.9"
   },
@@ -62,6 +64,7 @@
     "@dcloudio/uni-cli-shared": "3.0.0-3080720230703001",
     "@dcloudio/uni-stacktracey": "3.0.0-3080720230703001",
     "@dcloudio/vite-plugin-uni": "3.0.0-3080720230703001",
+    "@types/node": "^20.4.5",
     "@typescript-eslint/eslint-plugin": "^6.2.0",
     "@typescript-eslint/parser": "^6.2.0",
     "@vue/tsconfig": "^0.1.3",
@@ -69,6 +72,7 @@
     "eslint-plugin-vue": "^9.15.1",
     "husky": "^8.0.0",
     "lint-staged": "^13.2.3",
+    "sass": "^1.64.1",
     "typescript": "^4.9.4",
     "unplugin-auto-import": "^0.16.6",
     "unplugin-vue-components": "^0.25.1",
