--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
 # 本地环境接口地址
-VITE_API_BASE_URL = 'https://awp-rental.sany.com.cn/'
+VITE_API_BASE_URL = 'https://awp-rental.sany.com.cn'
 VITE_AMAP_KEY = '1c1cd01002b27cb71d705d54aa607c99'
