--- a/package.json
+++ b/package.json
@@ -69,11 +69,16 @@
     "@typescript-eslint/eslint-plugin": "^6.2.0",
     "@typescript-eslint/parser": "^6.2.0",
     "@vue/tsconfig": "^0.1.3",
+    "autoprefixer": "^10.4.14",
+    "css-byebye": "^4.0.1",
     "eslint": "^8.45.0",
     "eslint-plugin-vue": "^9.15.1",
     "husky": "^8.0.0",
     "lint-staged": "^13.2.3",
+    "postcss": "^8.4.27",
+    "postcss-class-rename": "^1.0.1",
     "sass": "^1.64.1",
+    "tailwindcss": "^3.1.8",
     "typescript": "^4.9.4",
     "unplugin-auto-import": "^0.16.6",
     "unplugin-vue-components": "^0.25.1",
