--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "lint-staged": "^13.2.3",
     "postcss": "^8.4.27",
     "postcss-class-rename": "^1.0.1",
+    "postcss-rem-to-responsive-pixel": "^5.1.3",
     "sass": "^1.64.1",
     "tailwindcss": "^3.1.8",
     "typescript": "^4.9.4",
@@ -84,7 +85,8 @@
     "unplugin-vue-components": "^0.25.1",
     "vite": "4.0.4",
     "vite-plugin-eslint": "^1.8.1",
-    "vue-tsc": "^1.0.24"
+    "vue-tsc": "^1.0.24",
+    "weapp-tailwindcss": "^2.6.3"
   },
   "lint-staged": {
     "*.{js,vue,ts,jsx,tsx}": [
