--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@dcloudio/uni-quickapp-webview": "3.0.0-3080720230703001",
     "@vueuse/core": "^10.2.1",
     "luch-request": "^3.1.0",
+    "pinia": "^2.1.6",
     "vue": "^3.2.45",
     "vue-i18n": "^9.1.9"
   },
